# plant_project

./: .gitignore  CMakeLists.txt
ToolchainCapabilityDatabase/: log.txt
boards/: nucleo_wl55jc.overlay
confs/: prj_nucleo_wl55jc.conf
docs/: New Microsoft Excel Worksheet.xlsx  ~$New Microsoft Excel Worksheet.xlsx
src/: main.c  main.h
src/sensors/: accelerometer.c  accelerometer.h  color_sensor.c  color_sensor.h  gps.c  gps.h  light_sensor.c  light_sensor.h  rgb_led.c  rgb_led.h  soil_sensor.c  soil_sensor.h  temp_sensor.c  temp_sensor.h
